--- a/kubernetes-basic/values.yaml
+++ b/kubernetes-basic/values.yaml
@@ -1,7 +1,7 @@
-name: cdng
+name: todolist-cdng
 replicas: 1
 image: <+artifact.image>
-
+dockercfg: <+artifact.source.dockerconfig>
 
 createNamespace: true
 namespace: <+infrastructure.namespace>
@@ -12,3 +12,4 @@ env:
     key1: harnessDemo
   secrets:
     key2: thisSecret
+
