--- a/kubernetes-basic/values.yaml
+++ b/kubernetes-basic/values.yaml
@@ -1,7 +1,7 @@
 name: todolist-cdng
 replicas: 1
 image: <+artifact.image>
-dockercfg: <+artifact.source.dockerconfig>
+dockercfg: <+artifact.imagePullSecret>
 
 createNamespace: true
 namespace: <+infrastructure.namespace>
